ingress-ngnix/Ingressclass-lb.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: gm-services
  labels:
    app.kubernetes.io/name: LoadBalancerController
  name: alb
spec:
  controller: eks.amazonaws.com/alb
